--- a/Angular_cafe_Mgm/Cafe-app/src/app/admin/categories/categories.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/admin/categories/categories.component.html
@@ -59,10 +59,10 @@
                 <table class="table table-hover table-dark table-bordered">
                     <thead>
                         <tr>
-                            <th>Category ID</th>
+                            <!-- <th>Category ID</th> -->
                             <th>Category Name</th>
                             <th>Image</th>
-                            <th>IsActive</th>
+                            <!-- <th>IsActive</th> -->
                             <th>Created Date</th>
                             <th>Delete</th>
                             <th>Select</th>
@@ -71,10 +71,10 @@
                     </thead>
                     <tbody>
                         <tr *ngFor="let p of objs.cList">
-                            <td>{{p.CategoryId}}</td>
+                            <!-- <td>{{p.CategoryId}}</td> -->
                             <td>{{p.Name}}</td>
                             <td>  <img [src]="p.ImageUrl" [alt]="p.Name"> </td>
-                            <td>{{p.IsActive}}</td>
+                            <!-- <td>{{p.IsActive}}</td> -->
                            <td>{{p.CreatedDate | date}}</td>
                            <td><i class="bi bi-trash3" (click)="onDelete(p.CategoryId)"></i></td>
                            <td><i class="bi bi-pencil-square" (click)="fillData(p)"></i></td>
@@ -109,14 +109,14 @@
                 </div> 
 
              
-                <div class="form-group">
+                <!-- <div class="form-group">
                    
                         <div class="input-group-text">
                             <input type="checkbox" class="form-check-input" name="IsActive" [(ngModel)]="objs.cData.IsActive">
                             <label class="form-check-label">Is Active</label>
                         </div>
                     
-                </div>
+                </div> -->
             
                 <div class="form-group">
                     <div class="input-group-text bg-white text-warning">
