--- a/Angular_cafe_Mgm/Cafe-app/src/app/admin/dashboard/dashboard.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/admin/dashboard/dashboard.component.html
@@ -99,7 +99,7 @@
                         <div class="card text-center mb-4">
                           <div class="card-body">
                             <h5 class="card-title">Pending Items</h5>
-                            <p class="card-text">{{ci}}</p>
+                            <p class="card-text">{{pi}}</p>
                             <a routerLink="/orders" class="btn btn-primary">View Details</a>
                           </div>
                         </div>
