--- a/Angular_cafe_Mgm/Cafe-app/src/app/admin/products/products.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/admin/products/products.component.html
@@ -85,7 +85,7 @@
 
                 <h1>Register Product</h1>
 
-                <form #form="ngForm" autocomplete="off" (submit)="onSubmit(form)">
+                <form #form="ngForm" autocomplete="off" (submit)="onSubmit(form,fileInput)">
                   <div class="form-group">
                     <input type="text" class="form-control" name="Name" 
                            [(ngModel)]="objs.pData.Name" placeholder="Product Name" required>
@@ -105,7 +105,7 @@
                 <div class="form-group pt-3">
                     <label for="imageUpload" class="font-weight-bold">Upload Image</label>
                     <div class="input-field">
-                        <input type="file" (change)="onFileSelected($event)" />
+                        <input type="file" (change)="onFileSelected($event)" #fileInput />
                     </div>
                 </div>
                 
@@ -113,7 +113,7 @@
 
                   <div class="form-group">
                     <label for="category">Category</label>
-                    <select class="form-control" name="CategoryId" [(ngModel)]="obj.pData.CategoryId" required>
+                    <select class="form-control" name="CategoryId" [(ngModel)]="objs.pData.CategoryId" required>
                       <option *ngFor="let category of obj.categoryList" [value]="category.CategoryId">{{ category.Name }}</option>
                     </select>
 
