--- a/Angular_cafe_Mgm/Cafe-app/src/app/signup/signup.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/signup/signup.component.html
@@ -105,7 +105,7 @@
                             <div class="form-group pt-3">
                                 <div class="input-field" [class.error]="signUpForm.controls['name']?.dirty && signUpForm.controls['name']?.invalid">
                                     <span class="fa fa-user p-2"></span>
-                                    <input name="name" ngModel required type="text" placeholder="Name">
+                                    <input name="name" ngModel required type="text" placeholder="Name"  pattern="^(?!\s)([A-Za-z]+(\s[A-Za-z]+)*)?(?<!\s)$">
                                 </div>
                             </div>
                             <small *ngIf="signUpForm.controls['name']?.dirty && signUpForm.controls['name']?.invalid" class="text-danger">Name is required</small>
@@ -113,7 +113,9 @@
                             <div class="form-group pt-3">
                                 <div class="input-field" [class.error]="signUpForm.controls['username']?.dirty && signUpForm.controls['username']?.invalid">
                                     <span class="bi bi-person-badge-fill p-2"></span>
-                                    <input name="username" ngModel required type="text" placeholder="Username">
+                                    <input name="username" ngModel required type="text" placeholder="Username" minlength="3"
+                                    maxlength="20"
+                                    pattern="^[a-zA-Z0-9_@]*$">
                                 </div>
                             </div>
                             <small *ngIf="signUpForm.controls['username']?.dirty && signUpForm.controls['username']?.invalid" class="text-danger">Username is required</small>
@@ -121,7 +123,10 @@
                             <div class="form-group pt-3">
                                 <div class="input-field" [class.error]="signUpForm.controls['mobile']?.dirty && signUpForm.controls['mobile']?.invalid">
                                     <span class="bi bi-telephone-fill p-2"></span>
-                                    <input name="mobile" ngModel required type="text" placeholder="Mobile">
+                                    <input name="mobile" ngModel required type="text" placeholder="Mobile"
+                                    pattern="^[1-9]\d{9}$"
+                                    minlength="10"
+                                    maxlength="10">
                                 </div>
                             </div>
                             <small *ngIf="signUpForm.controls['mobile']?.dirty && signUpForm.controls['mobile']?.invalid" class="text-danger">Mobile No. is required</small>
@@ -129,7 +134,7 @@
                             <div class="form-group pt-3">
                                 <div class="input-field" [class.error]="signUpForm.controls['email']?.dirty && signUpForm.controls['email']?.invalid">
                                     <span class="bi bi-envelope-fill p-2"></span>
-                                    <input name="email" ngModel  type="email" placeholder="Email" required email>
+                                    <input name="email" ngModel  type="email" placeholder="Email" required email pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$">
                                 </div>
                             </div>
                             <small *ngIf="signUpForm.controls['email']?.dirty && signUpForm.controls['email']?.invalid" class="text-danger" >Email is required</small>
@@ -137,7 +142,7 @@
                             <div class="form-group pt-3">
                                 <div class="input-field" [class.error]="signUpForm.controls['address']?.dirty && signUpForm.controls['address']?.invalid">
                                     <span class="bi bi-house-door-fill p-2"></span>
-                                    <input name="address" ngModel required type="text" placeholder="Address">
+                                    <input name="address" ngModel required type="text" placeholder="Address" pattern="^(?! )[^\s]+(?:[^\s]*[^\s])?(?! )$">
                                 </div>
                             </div>
                             <small *ngIf="signUpForm.controls['address']?.dirty && signUpForm.controls['address']?.invalid" class="text-danger">Address is required</small>
@@ -145,7 +150,7 @@
                             <div class="form-group pt-3">
                                 <div class="input-field" [class.error]="signUpForm.controls['postcode']?.dirty && signUpForm.controls['postcode']?.invalid">
                                     <span class="bi bi-mailbox2 p-2"></span>
-                                    <input name="postcode" ngModel required type="text" placeholder="Postal Code">
+                                    <input name="postcode" ngModel required type="text" placeholder="Postal Code"     pattern="^\d+$"                         >
                                 </div>
                             </div>
                             <small *ngIf="signUpForm.controls['postcode']?.dirty && signUpForm.controls['postcode']?.invalid" class="text-danger">Postal Code is required</small>
