--- a/Angular_cafe_Mgm/Cafe-app/src/app/admin/customers/customers.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/admin/customers/customers.component.html
@@ -58,7 +58,7 @@
                     <table class="table table-hover table-dark table-bordered">
                         <thead>
                             <tr>
-                                <th>UserID</th>
+                                <!-- <th>UserID</th> -->
                                 <th>Image</th>
                                 <th>Name</th>
                                 <th>Mobile</th>
@@ -73,7 +73,7 @@
                         <tbody>
                             <tr *ngFor="let p of objs.uList" >
                                 
-                                <td >{{p.UserId}}</td>
+                                <!-- <td >{{p.UserId}}</td> -->
                                 <td><img [src] = "p.ImageUrl" alt="Not Found" ></td>
                                 <td>{{p.Name}}</td>
                                 <td>{{p.Mobile}}</td>
