--- a/Angular_cafe_Mgm/Cafe-app/src/app/footer/footer.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/footer/footer.component.html
@@ -31,7 +31,7 @@
         <div class="col-md-4 footer-col">
           <div class="footer_detail">
             <a href="" class="footer-logo">
-              Feane
+              Cafe
             </a>
             <p>
               Necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with
@@ -69,10 +69,10 @@
       </div>
       <div class="footer-info">
         <p>
-          &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a><br><br>
-          &copy; <span id="displayYear"></span> Distributed By
-          <a href="https://themewagon.com/" target="_blank">Code Runner</a>
+          &copy; <span id="displayYear"></span> All Rights Reserved
+          <!-- <a href="https://html.design/">Free Html Templates</a><br><br>
+          &copy; <span id="displayYear"></span> Distributed By -->
+          <!-- <a href="https://themewagon.com/" target="_blank">Code Runner</a> -->
         </p>
       </div>
     </div>
