--- a/Angular_cafe_Mgm/Cafe-app/src/app/purchase/purchase.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/purchase/purchase.component.html
@@ -14,6 +14,7 @@
             <th>Total Amount</th>
             <th>Status</th>
             <th>Order Date</th>
+            <th>Details</th>
         
           </tr>
         </thead>
@@ -33,6 +34,8 @@
             </td>
 
             <td>{{ order.OrderDate | date }}</td>
+
+            <td><i class="bi bi-menu-down"  routerLink="/orderitem/{{order.OrderId}}" ></i></td>
 
  
 
