--- a/Angular_cafe_Mgm/Cafe-app/src/app/cart/cart.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/cart/cart.component.html
@@ -48,7 +48,7 @@
   
                     <p class="text-start text-md-center">
                       <strong>
-                        <span class="text-muted">{{ item.Quantity }}</span> x ${{ item.Price }}
+                        <span class="text-muted">{{ item.Quantity }}</span> x ₹{{ item.Price }}
                       </strong>
                     </p>
                   </div>
@@ -68,17 +68,17 @@
             <div class="card-body">
               <ul class="list-group list-group-flush">
                 <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
-                  Products ({{ totalItems }}) <span>${{ subtotal }}</span>
+                  Products ({{ totalItems }}) <span>₹{{ subtotal }}</span>
                 </li>
                 <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                  Shipping <span>${{ shipping }}</span>
+                  Shipping <span>₹{{ shipping }}</span>
                 </li>
                 <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
                   <div>
                     <strong>Total amount</strong>
                   </div>
                   <span>
-                    <strong>${{ (subtotal + shipping) }}</strong>
+                    <strong>₹{{ (subtotal + shipping) }}</strong>
                   </span>
                 </li>
               </ul>
