--- a/Angular_cafe_Mgm/Cafe-app/src/app/payment/payment.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/payment/payment.component.html
@@ -3,13 +3,20 @@
     <form (ngSubmit)="onSubmit(paymentForm)" #paymentForm="ngForm">
         <div class="mb-3">
             <label for="name" class="form-label">Customer Name</label>
-            <input type="text" id="name" name="name" class="form-control" ngModel placeholder="Enter your name" required>
+            <input type="text" id="name" name="name" class="form-control" pattern="^(?!\s)([A-Za-z]+(\s[A-Za-z]+)*)?(?<!\s)$" ngModel placeholder="Enter your name" required>
         </div>
+        <small *ngIf="paymentForm.controls['name']?.dirty && paymentForm.controls['name']?.invalid" class="text-danger">Name is required</small>
 
-        <!-- <div class="mb-3">
+
+        <div class="mb-3">
             <label for="address" class="form-label">Address</label>
-            <input type="text" id="address" name="address" class="form-control" ngModel placeholder="Enter your address" required>
-        </div> -->
+            <input type="text" id="address" name="address" class="form-control" [(ngModel)]="savedAddress" placeholder="Enter your address" required>
+            <small *ngIf="paymentForm.controls['address']?.dirty && paymentForm.controls['address']?.invalid" class="text-danger">Address is required</small>
+
+        </div>
+        <button type="button" class="btn btn-secondary" (click)="useSavedAddress()">Use Registered Address</button>
+
+
 
         <div class="mb-3">
             <label for="paymentMode" class="form-label">Payment Mode</label>
